# magenta-realtime

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.gpu  README.md  TECHNICAL_REPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cli_tests.yml  pypi_publish.yml
core/: CMakeLists.txt
core/include/magentart/: envelope.h  realtime_runner.h
core/src/: envelope_reset_test.cpp  realtime_runner.cpp
docs/: index.md  inference.md  installation.md  models.md
docs/apps/: collider.md  developer.md  distributing.md  index.md
examples/: package-lock.json
examples/collider/: CMakeLists.txt  ColliderAppController.mm
examples/collider/ui/config/: vite.config.ts
examples/collider/ui/src/: App.tsx  index.css
examples/common/objc/: MagentaSettings.h  MagentaSettings.mm
examples/common/react_ui/: MidiSelector.tsx  ModelSelector.tsx  PromptSurface.tsx  ResourceOnboardingModal.tsx  defaultParams.ts  index.ts  prompt-surface.css
examples/docker_generation/: Dockerfile  client.py  serve.py
examples/jam/: JamAppController.mm
examples/jam/ui/config/: vite.config.ts
examples/jam/ui/src/: App.tsx  PianoKeyboard.tsx
examples/max/: INSTALL.md
examples/mrt2/auv3/: MagentaRT_AudioUnit.mm  README.md
examples/mrt2/react_ui/config/: vite.config.ts
examples/mrt2/react_ui/src/: App.tsx
examples/mrt2/react_ui/src/components/: PromptRow.tsx
examples/mrt2/standalone/: MagentaRTAppController.mm
examples/scripts/: build-release.sh  clear-defaults.sh  dev-all.sh
magenta_rt/: __init__.py  asset.py  audio.py  conditioning.py  generate.py  musiccoca.py  paths.py  server.py  system.py  system_test.py  utils.py
magenta_rt/_vendor/: _vendor_hook.py
magenta_rt/_vendor/audiotree/audiotree/: __init__.py  core.py
magenta_rt/cli/: __init__.py  jax_commands.py  mlx_commands.py  models_commands.py  nnx_commands.py
magenta_rt/colab/: prompt_types.py  widgets.py
magenta_rt/depthformer/: model.py  modules.py  modules_test.py
magenta_rt/finetune/: data.py  finetuner.py  tasks.py
magenta_rt/jax/: depthformer.py  generate.py  model.py  system.py
magenta_rt/mlx/: README.md  depthformer.py  export.py  generate.py  model.py  system.py
magenta_rt/mlx/spectrostream/: load_weights.py  modeling.py
magenta_rt/nnx/: README.md  __init__.py  attention.py  cache.py  configs.py  conv.py  depthformer.py  generate.py  load_weights.py  model.py  quantize.py  sample_utils.py  signal.py  system.py  transformer.py
magenta_rt/nnx/spectrostream/: __init__.py  load_weights.py  model.py
notebooks/: Fine_Tuning_Magenta_RT.ipynb  Magenta_RT_Audio_Injection.ipynb  Magenta_RT_Demo.ipynb  Magenta_RT_Finetune.ipynb  Realtime_Audio_Input_Conditining.ipynb  demo_magenta_rt_v2_nnx.ipynb  python_inference_demo.ipynb
scripts/: bulk_generate.py  latency_nnx_vs_jax.py  latency_nnx_vs_jax.sh
tests/: conftest.py  test_audio.py  test_bitlevel_parity.py  test_conditioning.py  test_gptq.py  test_mlx_system_generate.py  test_musiccoca.py  test_prefill_correctness.py
tests/nnx/: test_attention.py  test_conv.py  test_conv_streaming.py  test_multichannel_embedding.py  test_no_jaxlinen_dependency.py  test_remat_dropout.py  test_rvq.py  test_scan_generate.py  test_signal.py  test_system.py  test_transformer.py  test_weight_loading.py
tests/nnx/parity/: conftest.py  test_codec_streaming.py  test_configs_registry.py  test_depthformer.py  test_e2e_jax_nnx_code_parity.py  test_jax_logit_parity.py  test_multistep_code_parity.py  test_real_checkpoint.py  test_sample_utils.py  test_soundstream.py  test_spectrostream_jax_parity.py  test_system_e2e.py  test_weight_bridge.py
