[project]
name = "magenta-rt"
description = "Real-time music generation models."
readme = "README.md"
keywords = ["music", "generation", "real-time", "audio", "mlx", "jax", "depthformer"]
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Google LLC"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

# NOTE(vendoring): Once sequence-layers is on PyPI, add "sequence_layers" and
# remove "typeguard", "jaxtyping", and "recurrentgemma" (pulled in by sequence_layers).
dependencies = [
    "ai-edge-litert",
    "click",
    "numpy",
    "scipy",
    "einops",
    "safetensors",
    "typeguard==2.13.3",
    "jaxtyping",
    "recurrentgemma[jax]>=1.0.1",
    "google-cloud-storage",
    "huggingface_hub",
    "simple-term-menu",
    "librosa",
    "sentencepiece",
    "soundfile",
]

[tool.uv]
# `recurrentgemma` — a base dep, pulled in everywhere via the vendored
# sequence-layers — uses jaxtyping's old `typeguard.typechecked` pattern, which
# breaks under ANY typeguard>=3: its `*batch`-style shape annotations make
# typeguard's AST instrumentor raise `SyntaxError: invalid syntax` at import,
# taking down `sequence_layers.jax`/`.mlx` (and thus most of the nnx parity
# suite). Hold the whole env below typeguard 3.
override-dependencies = ["typeguard<3"]

[tool.uv.sources]
# NOTE(vendoring): submodule moved to magenta_rt/_vendor/sequence-layers.
# Uncomment for local editable development:
# sequence_layers = { path = "magenta_rt/_vendor/sequence-layers", editable = true }

[project.urls]
Repository = "https://github.com/magenta/magenta-realtime"
Issues = "https://github.com/magenta/magenta-realtime/issues"

# NOTE(vendoring): Once sequence-layers is on PyPI, add "sequence-layers[mlx]"
# to mlx (recurrentgemma can then move back to jax-only).
#
# NOTE(jax-everywhere): JAX is a dependency of EVERY install, not just [jax]:
# the base deps pull it via recurrentgemma[jax], and it is also structurally
# required — audiotree's AudioTree is a flax.struct pytree (jax + flax at
# import time), magenta_rt/audio.py imports jax.numpy, and the MLX backends
# bridge Linen-format checkpoints via flax (hence flax in the mlx extra).
# Don't "simplify" flax out of mlx or expect [mlx] to be jax-free.
[project.optional-dependencies]
jax = ["jax", "flax>=0.12.7", "optax", "jaxtyping", "typing_extensions"]
mlx = ["mlx", "flax>=0.12.7", "typing_extensions"]
dev = ["jupyter", "ipython", "pytest", "matplotlib", "pytest-cov"]

# Listener-eval bulk generation
eval = [
    "pandas",
]

[project.scripts]
mrt = "magenta_rt.cli:main"

[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.flit.module]
name = "magenta_rt"

[tool.flit.sdist]
exclude = ["core/", "examples/", "tools/", "build/", "scripts/", "tests/", "notebooks/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "checkpoint: requires a real safetensors file in checkpoints/",
    "slow: end-to-end / multi-second tests",
    "gptq: requires quantized weights",
    "bf16: bfloat16 mixed-precision path",
]

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
